--- a/WISLEY/navbar.Master
+++ b/WISLEY/navbar.Master
@@ -34,7 +34,7 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                    <i class="fas fa-bell text-white"></i></a>
+                        <i class="fas fa-bell text-white"></i></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="profileDD" data-toggle="dropdown" aria-haspopup="true"
@@ -52,9 +52,17 @@
 
     </nav>
     <!--/.Navbar-->
-    <div class="col-7">
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        </asp:ContentPlaceHolder>
+
+    <div class="container-fluid row justify-content-around border border-danger mx-auto">
+<%--        <div class="col-3 border border-danger">
+            <asp:ContentPlaceHolder ID="profileHolder" runat="server">
+            </asp:ContentPlaceHolder>
+        </div>--%>
+
+ 
+            <asp:ContentPlaceHolder ID="contentHolder1" runat="server">
+            </asp:ContentPlaceHolder>
+
     </div>
 
 
