--- a/WISLEY/navbar.Master
+++ b/WISLEY/navbar.Master
@@ -51,9 +51,11 @@
                         <a class="dropdown-item" href="/profile.aspx">
                             <i class="fas fa-id-card mr-1"></i>My Profile</a>
                         <a class="dropdown-item" href="/collab.aspx">
-                            <i class="fas fa-handshake mr-1"></i>Collaboration Board</a>
+                            <i class="fas fa-users"></i>My Groups</a>
                         <a class="dropdown-item" href="/schedule.aspx">
                             <i class="fas fa-calendar mr-1"></i>My Schedule</a>
+                        <a class="dropdown-item" href="#">
+                            <i class="fas fa-cogs mr-1"></i>Settings</a>
                     </div>
                 </li>
             </ul>
