--- a/WISLEY/sidebar.Master
+++ b/WISLEY/sidebar.Master
@@ -26,10 +26,10 @@
             <div class="col-12 justify-content-center">
                 <h4 class="text-center mx-auto">Modules</h4>
                 <hr class="hr-primary">
-                <button class="btn btn-block btn-white text-left border-left border-danger rounded-0 mb-1">Test </button>
-                <button class="btn btn-block btn-white text-left border-left border-danger rounded-0 mb-1">Test </button>
-                <button class="btn btn-block btn-white text-left border-left border-danger rounded-0 mb-1">Test </button>
-                <button class="btn btn-block btn-white text-left border-left border-danger rounded-0 mb-1">Test </button>
+                <a class="btn btn-block btn-white text-left border-left border-danger rounded-0 mb-1" href="collab.aspx">Test </a>
+                <a class="btn btn-block btn-white text-left border-left border-danger rounded-0 mb-1" href="collab.aspx">Test </a>
+                <a class="btn btn-block btn-white text-left border-left border-danger rounded-0 mb-1" href="collab.aspx">Test </a>
+                <a class="btn btn-block btn-white text-left border-left border-danger rounded-0 mb-1" href="collab.aspx">Test </a>
 
             </div>
         </div>
