--- a/WISLEY/navbar.Master
+++ b/WISLEY/navbar.Master
@@ -8,7 +8,7 @@
     <title>WISLEY</title>
     <link href="Public/css/bootstrap.min.css" rel="stylesheet" />
     <link href="Public/css/mdb.min.css" rel="stylesheet" />
-    <link href="Public/css/fontawesome.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
     <link href="content/toastr.css" rel="stylesheet" />
     <script src="Public/js/jquery.min.js"></script>
     <script src="scripts/toastr.js"></script>
@@ -69,7 +69,7 @@
                         <a class="dropdown-item" href="/profile.aspx">
                             <i class="fas fa-id-card mr-1"></i>My Profile</a>
                         <a class="dropdown-item" href="/collab.aspx">
-                            <i class="fas fa-users"></i>My Groups</a>
+                            <i class="fas fa-users mr-1"></i>My Groups</a>
                         <a class="dropdown-item" href="/schedule.aspx">
                             <i class="fas fa-calendar mr-1"></i>My Schedule</a>
                         <a class="dropdown-item" href="#">
