--- a/WISLEY/navbar.Master
+++ b/WISLEY/navbar.Master
@@ -36,7 +36,7 @@
 
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-md navbar-dark z-depth-3 primary-color-dark" style="padding-left: 12px 1rem !important;">
+    <nav class="navbar navbar-expand-md navbar-dark z-depth-3 primary-color-dark sticky-top" style="padding-left: 12px 1rem !important;">
 
         <!-- Navbar brand -->
         <a class="navbar-brand" href="index.aspx">WISELY</a>
@@ -88,7 +88,7 @@
         </asp:ContentPlaceHolder>
     </main>
 
-    <footer class="page-footer font-small blue mt-4">
+    <footer class="page-footer font-small blue mt-4 fixed-bottom">
         <div class="footer-copyright p-3">
             <a href="index.aspx">
                 <img src="https://picsum.photos/100" height="30" alt="WISELY">
