--- a/WISLEY/Views/Masters/navbar.Master
+++ b/WISLEY/Views/Masters/navbar.Master
@@ -79,7 +79,7 @@
                             <i class="fas fa-users mr-1"></i>My Groups</a>
                         <a class="dropdown-item" href="<%= Page.ResolveUrl("~/Views/Schedule/schedule.aspx") %>">
                             <i class="fas fa-calendar mr-1"></i>My Schedule</a>
-                        <a class="dropdown-item" href="#">
+                        <a class="dropdown-item" href="<%= Page.ResolveUrl("~/Views/Profile/settings.aspx") %>">
                             <i class="fas fa-cogs mr-1"></i>Settings</a>
                         <hr class="mt-0 mb-3" />
                         <a class="dropdown-item text-danger" href="#">
