Auto stash before merge of "master" and "origin/master"
I hope this works fine.

--- a/WISLEY/Public/css/style.css
+++ b/WISLEY/Public/css/style.css
@@ -3,6 +3,77 @@
 }
 
 .min-vh-90 {
-    min-height: 95vh !important;
+    min-height: 90vh !important;
 }
 
+.min-vh-85 {
+    min-height: 85vh !important;
+}
+
+.min-vh-80 {
+    min-height: 80vh !important;
+}
+
+.min-vh-75 {
+    min-height: 75vh !important;
+}
+
+.min-vh-70 {
+    min-height: 70vh !important;
+}
+
+.min-vh-65 {
+    min-height: 65vh !important;
+}
+
+.min-vh-60 {
+    min-height: 60vh !important;
+}
+
+.min-vh-55 {
+    min-height: 55vh !important;
+}
+
+.min-vh-50 {
+    min-height: 50vh !important;
+}
+
+.min-vw-95 {
+    min-height: 95vw !important;
+}
+
+.min-vw-90 {
+    min-height: 90vw !important;
+}
+
+.min-vw-85 {
+    min-height: 85vw !important;
+}
+
+.min-vw-80 {
+    min-height: 80vw !important;
+}
+
+.min-vw-75 {
+    min-height: 75vw !important;
+}
+
+.min-vw-70 {
+    min-height: 70vw !important;
+}
+
+.min-vw-65 {
+    min-height: 65vw !important;
+}
+
+.min-vw-60 {
+    min-height: 60vw !important;
+}
+
+.min-vw-55 {
+    min-height: 55vw !important;
+}
+
+.min-vw-50 {
+    min-height: 50vw !important;
+}
