Added back stuff

--- a/WISLEY/Views/Masters/navbar.Master
+++ b/WISLEY/Views/Masters/navbar.Master
@@ -12,6 +12,7 @@
     <link href="~/Public/css/mdb.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
     <link href="~/Public/css/toast/toastr.css" rel="stylesheet" />
+    <link href="~/Public/css/style.css" rel="stylesheet" />
 
     <script src="<%= ResolveUrl("~/Public/js/jquery.js") %>""></script>
     <script src="<%= ResolveUrl("~/Public/js/toast/toastr.js") %>""></script>
@@ -92,7 +93,7 @@
     </nav>
     <!--/.Navbar-->
 
-    <main class="container-fluid mx-auto mt-3">
+    <main class="container-fluid mx-auto mt-3 min-vh-85">
         <asp:ContentPlaceHolder ID="contentHolder1" runat="server">
         </asp:ContentPlaceHolder>
     </main>
