--- a/WISLEY/Views/Masters/group.Master
+++ b/WISLEY/Views/Masters/group.Master
@@ -1,7 +1,7 @@
 ﻿<%@ Master Language="C#" MasterPageFile="sidebar.Master" AutoEventWireup="true" CodeBehind="sidebar.master.cs" Inherits="WISLEY.NestedMasterPage1" %>
 
 <asp:Content ID="Content3" ContentPlaceHolderID="sidebarContent" runat="server">
-    <div class="card card-body border-primary rounded-top mb-3">
+    <div class="card card-body rounded-top mb-3">
         <div class="row justify-content-center">
             <h1 class="text-center">Test </h1>
         </div>
@@ -34,7 +34,7 @@
         </li>
     </ul>
 
-    <div class="tab-content min-vh-80 border" id="myClassicTabContentShadow">
+    <div class="tab-content min-vh-80" id="myClassicTabContentShadow">
         <div class="tab-pane fade active show" id="posts-classic-shadow" role="tabpanel"
             aria-labelledby="posts-tab-classic-shadow">
             <div>
@@ -46,15 +46,6 @@
 
         <div class="tab-pane fade" id="resources-classic-shadow" role="tabpanel"
             aria-labelledby="resources-tab-classic-shadow">
-            <%--Hi
-            <% foreach (var site in Sites) { %>--%>
-            <!-- loop through the list -->
-            <%--<div>
-                <%= site %>--%>
-            <!-- write out the name of the site -->
-            <%--</div>
-            <% } %>--%>
-            <!--End the for loop -->
             <div>
                 <asp:ContentPlaceHolder ID="groupResources" runat="server">
                 </asp:ContentPlaceHolder>
