--- a/WISLEY/Views/Masters/sidebar.master
+++ b/WISLEY/Views/Masters/sidebar.master
@@ -6,9 +6,9 @@
 
 <asp:Content ID="Content3" ContentPlaceHolderID="contentHolder1" runat="server">
     <div class="row justify-content-around">
-        <div class="col-3 border border-secondary">
+        <div class="col-3">
 
-            <div class="card card-body mb-4 border-primary">
+            <div class="card card-body mb-4">
                 <div class="row justify-content-center">
                     <div class="col-4">
                         <img src="https://picsum.photos/100" class="mx-auto md-block">
@@ -23,7 +23,7 @@
                 </div>
             </div>
 
-            <div class="card card-body border-primary">
+            <div class="card card-body">
                 <div class="col-12 justify-content-center">
                     <h4 class="text-center mx-auto">Modules</h4>
                     <hr class="hr-primary">
@@ -37,7 +37,7 @@
 
         </div>
 
-        <div class="col-7 border border-secondary">
+        <div class="col-7 border">
             <asp:ContentPlaceHolder ID="sidebarContent" runat="server">
             </asp:ContentPlaceHolder>
         </div>
