--- a/WISLEY/Views/Masters/navbar.Master
+++ b/WISLEY/Views/Masters/navbar.Master
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-
+    <asp:Label runat="server" ID="Lbemail" Visible="false"></asp:Label>
 
     <!--Navbar-->
     <nav class="navbar navbar-expand-md navbar-dark z-depth-3 primary-color-dark sticky-top scrolling-navbar" style="padding-left: 12px 1rem !important;">
@@ -63,6 +63,8 @@
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
+                <%if (user() != null)
+                    { %>
                 <li class="nav-item mr-2 d-none d-md-block">
                     <a class="nav-link rounded" href="#">
                         <i class="fas fa-bell"></i></a>
@@ -88,6 +90,22 @@
                         </a>
                     </div>
                 </li>
+                <%} %>
+                <%else
+                    { %>
+                <li class="nav-item">
+					<hr class="hr-light d-md-none mt-3 mb-4">
+					<a class="btn btn-md btn-block dusty-grass-gradient black-text" href="<%=Page.ResolveUrl("~/Views/Profile/register.aspx") %>">
+						<i class="fas fa-user-plus mr-1"></i> Join
+					</a>
+				</li>
+                <li class="nav-item">
+					<a class="btn btn-md btn-info d-none d-md-block m-0 ml-3" href="<%=Page.ResolveUrl("~/Views/Profile/login.aspx") %>">
+						<i class="fas fa-sign-in-alt mr-1"></i> Sign In
+					</a>
+                </li>
+
+                <%} %>
             </ul>
         </div>
     </nav>
@@ -100,7 +118,7 @@
 
     <footer class="page-footer font-small mt-4 blue">
         <div class="footer-copyright p-3">
-            <a href="index.aspx">
+            <a href="<%= Page.ResolveUrl("~/Views/index.aspx") %>">
                 <img src="https://picsum.photos/100" height="30" alt="WISELY">
             </a>
             <span class="m-0">&copy; <%=DateTime.Now.Year.ToString() %> <a href="<%= Page.ResolveUrl("~/Views/index.aspx") %>">WISELY</a> All Rights Reserved
