--- a/WISLEY/Views/Masters/navbar.Master
+++ b/WISLEY/Views/Masters/navbar.Master
@@ -73,7 +73,7 @@
                     <a class="nav-link dropdown-toggle m-0 z-depth-1-half" id="profileDD" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <img class="deep-purple lighten-5 z-depth-0 rounded-circle" height="35" src="https://picsum.photos/100">
-                        <i class="fas fa-user animated faster"></i>Bryan
+                        <i class="fas fa-user animated faster"></i>
                     </a>
                     <div class="dropdown-menu dropdown-primary dropdown-menu-right mt-1" aria-labelledby="profileDD">
                         <a class="dropdown-item" href="<%= Page.ResolveUrl("~/Views/Profile/profile.aspx") %>">
