--- a/WISLEY/Views/Masters/navbar.Master
+++ b/WISLEY/Views/Masters/navbar.Master
@@ -85,7 +85,7 @@
                         <a class="dropdown-item" href="<%= Page.ResolveUrl("~/Views/Profile/settings.aspx") %>">
                             <i class="fas fa-cogs mr-1"></i>Settings</a>
                         <hr class="mt-0 mb-3" />
-                        <a class="dropdown-item text-danger" href="#">
+                        <a class="dropdown-item text-danger" href="<%= Page.ResolveUrl("~/Views/Auth/logout.aspx") %>">
                             <i class="fas fa-power-off mr-1"></i>Sign Out
                         </a>
                     </div>
@@ -95,12 +95,12 @@
                     { %>
                 <li class="nav-item">
 					<hr class="hr-light d-md-none mt-3 mb-4">
-					<a class="btn btn-md btn-block dusty-grass-gradient black-text" href="<%=Page.ResolveUrl("~/Views/Profile/register.aspx") %>">
+					<a class="btn btn-md btn-block dusty-grass-gradient black-text" href="<%=Page.ResolveUrl("~/Views/Auth/register.aspx") %>">
 						<i class="fas fa-user-plus mr-1"></i> Join
 					</a>
 				</li>
                 <li class="nav-item">
-					<a class="btn btn-md btn-info d-none d-md-block m-0 ml-3" href="<%=Page.ResolveUrl("~/Views/Profile/login.aspx") %>">
+					<a class="btn btn-md btn-info d-none d-md-block m-0 ml-3" href="<%=Page.ResolveUrl("~/Views/Auth/login.aspx") %>">
 						<i class="fas fa-sign-in-alt mr-1"></i> Sign In
 					</a>
                 </li>
