--- a/WISLEY/Public/css/style.css
+++ b/WISLEY/Public/css/style.css
@@ -38,6 +38,47 @@
     min-height: 50vh !important;
 }
 
+.min-vh-45 {
+    min-height: 45vh !important;
+}
+
+.min-vh-40 {
+    min-height: 40vh !important;
+}
+
+.min-vh-35 {
+    min-height: 35vh !important;
+}
+
+.min-vh-30 {
+    min-height: 30vh !important;
+}
+
+.min-vh-25 {
+    min-height: 25vh !important;
+}
+
+.min-vh-20 {
+    min-height: 20vh !important;
+}
+
+.min-vh-15 {
+    min-height: 15vh !important;
+}
+
+.min-vh-10 {
+    min-height: 10vh !important;
+}
+
+.min-vh-5 {
+    min-height: 5vh !important;
+}
+
+
+
+
+
+
 .min-vw-95 {
     min-height: 95vw !important;
 }
