--- a/WISLEY/Public/css/style.css
+++ b/WISLEY/Public/css/style.css
@@ -75,6 +75,92 @@
 }
 
 
+/*==============================================================================================================================*/  
+
+
+.max-vh-95 {
+    max-height: 95vh !important;
+}
+
+.max-vh-90 {
+    max-height: 90vh !important;
+}
+
+.max-vh-85 {
+    max-height: 85vh !important;
+}
+
+.max-vh-80 {
+    max-height: 80vh !important;
+}
+
+.max-vh-75 {
+    max-height: 75vh !important;
+}
+
+.max-vh-70 {
+    max-height: 70vh !important;
+}
+
+.max-vh-65 {
+    max-height: 65vh !important;
+}
+
+.max-vh-60 {
+    max-height: 60vh !important;
+}
+
+.max-vh-55 {
+    max-height: 55vh !important;
+}
+
+.max-vh-50 {
+    max-height: 50vh !important;
+}
+
+.max-vh-45 {
+    max-height: 45vh !important;
+}
+
+.max-vh-40 {
+    max-height: 40vh !important;
+}
+
+.max-vh-35 {
+    max-height: 35vh !important;
+}
+
+.max-vh-30 {
+    max-height: 30vh !important;
+}
+
+.max-vh-25 {
+    max-height: 25vh !important;
+}
+
+.max-vh-20 {
+    max-height: 20vh !important;
+}
+
+.max-vh-15 {
+    max-height: 15vh !important;
+}
+
+.max-vh-10 {
+    max-height: 10vh !important;
+}
+
+.max-vh-5 {
+    max-height: 5vh !important;
+}
+
+
+
+
+
+/*==============================================================================================================================*/
+
+
 
 
 
