--- a/WISLEY/Views/Masters/sidebar.master
+++ b/WISLEY/Views/Masters/sidebar.master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" MasterPageFile="navbar.Master" AutoEventWireup="true" CodeBehind="sidebar.master.cs" Inherits="WISLEY.NestedMasterPage1" %>
+﻿<%@ Master Language="C#" MasterPageFile="navbar.Master" AutoEventWireup="false" CodeBehind="sidebar.master.cs" Inherits="WISLEY.NestedMasterPage1" %>
 
 
 <%--<asp:content id="content1" contentplaceholderid="head" runat="server">
@@ -27,16 +27,46 @@
             </div>
 
             <div class="card card-body">
-                <div class="col-12 justify-content-center min-vh-50">
+
+
+
+
+                <div class="col-12 max-vh-10 overflow-auto">
                     <h4 class="text-center mx-auto">Modules</h4>
                     <hr class="hr-primary">
-                     <%if (getGroups()[0] != null)
-                         {%>
-                    <% foreach (WISLEY.BLL.Group.Group groups in getGroups()){ %>
-                            <a class="btn btn-block btn-white text-left border-left border-danger rounded-0 mb-1" href="#"><%= groups.id %> <%= groups.name %> </a>
-                         <%} %>
+                    <%if (getGroups()[0] != null)
+                        {%>
+
+
+                    <asp:Repeater
+                        runat="server" ID="groupBtns" DataSourceID="groupData"
+                        OnItemCommand="groupItemCommand">
+                        <ItemTemplate>
+                            <asp:LinkButton ID="groupRedirect" runat="server" Text='<%#Eval("name")%>' CommandName="redirectToGroup" CommandArgument='<%#Eval("Id") %>'
+                                class="btn btn-block btn-white text-left border-left border-danger rounded-0 mb-1" Style="text-transform: unset;" />
+                        </ItemTemplate>
+                    </asp:Repeater>
+
+
+                    <asp:SqlDataSource ID="groupData"
+                        ConnectionString="<%$ connectionStrings: ConnStr%>"
+                        runat="server"></asp:SqlDataSource>
+
+
+
+
+
+
                     <%} %>
+                    <hr class="hr-primary" />
                 </div>
+
+
+
+
+
+
+
 
                 <div class="col-12 justify-content-center">
                     <a id="createGroupBtn" class="btn btn-block btn-success text-left rounded-0 mb-1 invisible" href="<%= Page.ResolveUrl("~/Views/Group/createGroup.aspx") %>"><i class="fas fa-plus"></i>Create Group </a>
@@ -45,9 +75,23 @@
 
         </div>
 
-        <div class="col-7 border">
+        <div class="col-6 border">
             <asp:ContentPlaceHolder ID="sidebarContent" runat="server">
             </asp:ContentPlaceHolder>
+        </div>
+
+        <div class="col-3">
+            <div class="card card-body mb-4">
+                <div class="row justify-content-center">
+                    <h1 class="col-12 text-center"> Schedule </h1>
+                    <div class="col-4">
+                        <img src="https://picsum.photos/100" class="mx-auto md-block">
+                        <!-- Social shares button -->
+                    </div>
+
+
+                </div>
+            </div>
         </div>
     </div>
 
