--- a/WISLEY/Views/Masters/group.Master
+++ b/WISLEY/Views/Masters/group.Master
@@ -1,30 +1,42 @@
 ﻿<%@ Master Language="C#" MasterPageFile="sidebar.Master" AutoEventWireup="true" CodeBehind="sidebar.master.cs" Inherits="WISLEY.NestedMasterPage1" %>
 
 <asp:Content ID="Content3" ContentPlaceHolderID="sidebarContent" runat="server">
-    <div class="card card-body rounded-top mb-3">
-        <div class="row justify-content-center">
-            <% if (Session["group"] != null)
-                {
-                    string grpName = getGroupDetails().name;
-                    string grpDesc = getGroupDetails().description;
-            %>
-            <h1 class="text-center col-12">
+     <% if (Request.QueryString["groupId"] != null)
+     {
+        string grpName = getGroupDetails().name;
+        string grpDesc = getGroupDetails().description;
+        string grpCode = getGroupDetails().joinCode;
+     %>
 
+    <div class="card card-body rounded-top mb-3">
+        <div class="row justify-content-end">
+            
+            <a href="<%=Page.ResolveUrl("~/Views/Group/editGroup.aspx?groupId=" + Request.QueryString["groupId"]) %>"><i class="fas fa-edit fa-lg text-primary mr-2"></i></a>
+        </div>
+        <div class="row justify-content-center">
+
+            <h1 class="text-left col-12">
                 <%= grpName %>
-             
             </h1>
 
-            <p class"text-center col-12">
+            <p class="text-left col-12">
                 <%= grpDesc %>
             </p>
 
-            <% } %>
+            <p class="text-left col-12">
+                Invite code: <span><%= grpCode %></span>
+            </p>
+
+     
         </div>
 
-    </div>
+    
+        </div>
 
+    <div class="card card-body border border-primary rounded p-0">
 
-    <ul class="nav nav-tabs" id="myClassicTabShadow" role="tablist">
+    <ul class="nav nav-tabs border-bottom-0 white" id="myClassicTabShadow" role="tablist">
+
         <li class="nav-item">
             <a class="nav-link waves-light active show" id="posts-tab-classic-shadow" data-toggle="tab"
                 href="#posts-classic-shadow" role="tab" aria-controls="posts-classic-shadow"
@@ -49,12 +61,19 @@
         </li>
     </ul>
 
+
+
     <div class="tab-content min-vh-80" id="myClassicTabContentShadow">
         <div class="tab-pane fade active show" id="posts-classic-shadow" role="tabpanel"
             aria-labelledby="posts-tab-classic-shadow">
             <div>
+    <% } %>
+
+
                 <asp:ContentPlaceHolder ID="groupPosts" runat="server">
                 </asp:ContentPlaceHolder>
+
+             <% if (Request.QueryString["groupId"] != null){%>                        
             </div>
 
         </div>
@@ -83,6 +102,8 @@
             </div>
         </div>
     </div>
+        </div>
 
+    <% } %>
 
 </asp:Content>
